# src/main/java/com/asma/paymentservice/entity/InvoiceStatus.java
@@ -1,0 +1,9 @@
+package com.asma.paymentservice.entity;
+
+public enum InvoiceStatus {
+    CREATED,
+    SENT,
+    PAID,
+    CANCELLED
+}
+
